@@ -1,3 +1,13 @@
+2013-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR2363: Remove EC source code prior to build
+	* NEWS: Updated.
+	* fsg.sh:
+	Remove source code for the EC provider which
+	isn't built.  Make the removals verbose so
+	they appear in logs as with
+	remove-intree-libraries.sh.
+
 2015-05-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR1977: Support using the system installation of Zlib
